@@ -3,7 +3,8 @@
 
 == rufus-scheduler - 1.0.12    not yet released
 
-- bug   #22546 : Added note about CronLine#next_time, K Liu
+- todo  #23257 : added :timeout parameter for cron/in/at/every
+- bug   #22546 : added note about CronLine#next_time, K Liu
 - todo  #22489 : find_jobs(tag=nil) patch by Xianhang Zhang
 
 
